<resources>
    <string name="app_name">SprintLeague</string>


    <string name="hello_text">Hello</string>
    <string name="please_wait">Please wait</string>
    <string name="welcome_text">Welcome to Emzio</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="maybe_later">Maybe later</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="or">Or</string>
    <string name="sign_up_google">Sign up with Google</string>
    <string name="log_in_google">Log in with Google</string>
    <string name="log_in_facebook">Log in with Facebook</string>
    <string name="sign_up_facebook">Sign up with Facebook</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email_or_phone">Email</string>
    <string name="enter_valid_name">Please enter a valid name</string>
    <string name="enter_valid_login">Please enter a valid Email</string>
    <string name="enter_valid_password">Please enter a valid Password</string>
    <string name="enter_valid_age">Please enter a valid Age</string>
    <string name="not_supported_yet">Not supported yet</string>
    <string name="password_requirements"><b>Your password must contain:</b>\n&#8226;\tAt least one lowercase letter.\n&#8226;\tOne uppercase letter.\n&#8226;\tOne numeric digit.\n&#8226;\tOne special character.\n&#8226;\tAnd be between 6 and 30 characters long.</string>
    <string name="login_failed">Login failed. Please check your email and password and try again.</string>
    <string name="title_activity_main_navigation_menu" translatable="false">MainNavigationMenu</string>
    <string name="title_start">Start</string>
    <string name="title_cart">Cart</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_myemzio">My Emzio</string>
    <string name="search">Search</string>
    <string name="random_text">Random Text</string>
    <string name="random_long_text">Random Long Text</string>
    <string name="user_full_name">User Full Name</string>
    <string name="user_email">User Email</string>
    <string name="user_feature_soon" translatable="false">Feature for user to be done soon</string>
    <string name="log_out">Log Out</string>
    <string name="verify_account">Please verify your account before logging in.</string>
    <string name="your_answer">Your answer</string>
    <string name="enter_valid_answer">Please Select a question or enter a valid answer</string>
    <string name="enter_your_email">Enter Email Address</string>
    <string name="send">Send</string>
    <string name="email_dont_exist">There is no account linked with the provided Email</string>
    <string name="secuirtu_question">Enter The Answer For Your Security Question</string>
    <string name="test_question">Please Select a security Question</string>
    <string name="check">Check</string>
    <string name="wrong_answer">Wrong Answer, Please Try Again!</string>
    <string name="enter_new_password">Enter Your New Password</string>
    <string name="change">Change</string>
    <string name="comma">,</string>
    <string name="logout">Logout</string>
    <string name="hey_there">Oh Hey There!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="text_attraction_signin">Sign in and Join our Running Community, and attend and organize Events</string>
    <string name="account_and_settings">Account &amp; Settings</string>
    <string name="edit_account_details">Edit Account Information</string>
    <string name="tournament_and_organizations">Tournaments &amp; Organization</string>
    <string name="add_tournament">Create Tournament</string>
    <string name="my_tournament">My Tournaments</string>
    <string name="upcoming_tournaments">Upcoming Tournaments</string>
    <string name="archive_tournaments">Tournaments Archive</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="rank">Rank</string>
    <string name="organize">Organize</string>
    <string name="tournaments_list">Tournaments List</string>
    <string name="my_activity">My Activity</string>
    <string name="tournament_title">Tournament Title</string>
    <string name="tournament_organizer">Tournament Organizer</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="hh">HH</string>
    <string name="mm">MM</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="street">Street</string>
    <string name="country">Country</string>
    <string name="max_partic">Max Participants</string>
    <string name="sponsors">Sponsors</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="clear_all">Clear all</string>
    <string name="finished_tournaments">Finished Tournaments</string>
    <string name="submit_results">Submit results</string>

    <string name="enter_valid_title">Please enter a valid Title</string>
    <string name="enter_valid_distance">Please enter a valid Distance</string>
    <string name="enter_valid_date">Please enter a valid Date</string>
    <string name="enter_valid_time">Please enter a valid Time</string>
    <string name="enter_valid_address">Please enter a valid Address</string>
    <string name="hint_max_participants">If keep the field empty your tournament will have no limit number of participants</string>
    <string name="select_from_map">Select from the Map</string>
    <string name="filter_by">Filter by</string>
    <string name="date_time">Date, Time</string>
    <string name="distance_example">10KM</string>
    <string name="n_tournamets"><b>XX</b> Tournament</string>
    <string name="tournamets">Tournament</string>
    <string name="loading">Loading...</string>

    <string name="please_select_address">Please select the Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tournament_cover">Tournament Cover</string>
    <string name="remove_image">Remove Image</string>
    <string name="sponsor_name">Sponsor Name</string>
    <string name="select_image">Select Image</string>
    <string name="uploading_tournament">Uploading Tournament...</string>
    <string name="edit_my_account">Edit my Account</string>
    <string name="old_password">Current Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>

    <string name="old_pass_not_correct">New Password</string>
    <string name="sort_by">Sort by</string>
    <string name="tournament">Tournament</string>
    <string name="places_left">XX/YY left</string>
    <string name="places_joined">XX/YY joined</string>
    <string name="address">Address</string>
    <string name="join">Join</string>
    <string name="cant_join">No more empty spots</string>
    <string name="login_first">You need to log in first to be able to join</string>
    <string name="unlimted_places">Unlimited spots</string>
    <string name="already_joined">You already joined this Tournament</string>
    <string name="spots_left">Spots left</string>
    <string name="edit_tournament">Edit Tournament</string>
    <string name="enter_valid_number">Please add a valid number</string>
    <string name="tournament_date">Tournament Date</string>
    <string name="tournament_join_deadline">Tournament joining deadline</string>
    <string name="level">level</string>
    <string name="valid_level">Please select a level</string>
    <string name="deadline_to_join">Join until: <br></br></string>
    <string name="deadline_passed">Tournament Registration Deadline Passed<br></br></string>

    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="joined">Joined</string>
    <string name="hint_result">If you do not click the check button, The result will no be saved</string>
    <string name="saved">Saved</string>
    <string name="total_engagment">Total Engagement</string>
    <string name="analysis">Analysis</string>
    <string name="of_joined">People who Attended</string>
    <string name="avg_duration">Average duration</string>
    <string name="avg_speed">Average speed</string>
    <string name="kmh">XX Km/h</string>
    <string name="open_tourn">Open Tournaments</string>
    <string name="status">Status</string>
    <string name="upcoming_tournament">Upcoming Tournaments</string>


    <string name="ss">SS</string>


    <string name="level_dont_match">Your current level does not match the requirements</string>
    <string name="my_archive">My Archive</string>
    <string name="waiting_for_results">In Progress</string>
    <string name="results">Results</string>
    <string name="tournament_results">Tournaments Results</string>


    <string-array name="security_question">
        <item>Please Select a security Question</item>
        <item>What is the name of your first pet?</item>
        <item>In which city were you born?</item>
        <item>What was the name of your first school?</item>
        <item>What is the name of the street you grew up on?</item>
        <item>What was the name of your first boss?</item>
    </string-array>

    <string-array name="sorting">
        <item>Default</item>
        <item>Distance: <b>Ascending</b></item>
        <item>Distance: <b>descending</b></item>
        <item>Date: <b>(Soonest First)</b></item>
        <item>Date: <b>(Latest  First)</b></item>

    </string-array>

    <string-array name="tournament_level">
        <item>--Tournament Level--</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>