<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">


    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/account_layout_logged_in"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView

                        android:textSize="18sp"
                        android:text="@string/hello_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView

                        android:text="@string/comma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/account_user_first_name"
                        android:textSize="20sp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <RelativeLayout

                    android:id="@+id/logout_click"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/button_drawable_red_background">

                    <TextView


                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/logout"

                        android:textAlignment="center"
                        android:textColor="@color/white_white"
                        android:textStyle="bold" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:visibility="visible"
                android:id="@+id/account_layout_not_logged_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent">





                <TextView


                    android:layout_marginTop="30dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="@string/welcome_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/solmon"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:text="@string/text_attraction_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RelativeLayout

                    android:id="@+id/account_click_login"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/button_drawable_solmon_background">

                    <TextView


                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/log_in"

                        android:textAlignment="center"
                        android:textColor="@color/white_white"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout


                    android:id="@+id/account_click_signup"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/button_drawable_white_black_background">

                    <TextView


                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/sign_up"

                        android:textAlignment="center"
                        android:textColor="@color/black_white"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>





    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>