<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView

        android:scrollbars="none"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <TextView


                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="22sp"
                android:textAlignment="center"
                android:text="@string/secuirtu_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView

                android:visibility="invisible"
                android:layout_marginTop="45dp"
                android:id="@+id/enter_answer_wrong_answer"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/error_red"
                android:text="@string/wrong_answer"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView


                android:id="@+id/enter_answer_textview_question"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/solmon_solmondark"
                android:textAlignment="center"
                android:text="@string/test_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>






            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"

                android:layout_marginRight="25dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightsolmon_gray"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_security" />


                    <EditText


                        android:id="@+id/enter_answer_edittext_answer"
                        android:layout_width="match_parent"

                        android:layout_height="match_parent"

                        android:layout_marginLeft="9dp"

                        android:background="@android:color/transparent"

                        android:hint="@string/your_answer"
                        android:inputType="text" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView

                android:visibility="gone"
                android:id="@+id/text_view_enter_valid_answer"
                android:textStyle="bold"
                android:textColor="@color/error_red"
                android:text="@string/enter_valid_answer"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView


                android:visibility="gone"
                android:id="@+id/forgot_pass_enter_valid_login"
                android:textStyle="bold"
                android:textColor="@color/error_red"
                android:text="@string/enter_valid_login"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout

                android:id="@+id/enter_answer_click_check"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/button_drawable_solmon_background">

                <TextView


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/check"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/white_white"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>