<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="43dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/solmon"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:visibility="invisible"
                android:layout_marginTop="45dp"
                android:id="@+id/text_view_login_failed"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/error_red"
                android:text="@string/login_failed"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>





            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"

                android:layout_marginRight="25dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightsolmon_gray"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_email" />


                    <EditText


                        android:id="@+id/login_edittext_email_or_phone"
                        android:layout_width="match_parent"

                        android:layout_height="match_parent"

                        android:layout_marginLeft="9dp"

                        android:background="@android:color/transparent"

                        android:hint="@string/email_or_phone"
                        android:inputType="text" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView

                android:visibility="gone"
                android:id="@+id/text_view_enter_valid_login"
                android:textStyle="bold"
                android:textColor="@color/error_red"
                android:text="@string/enter_valid_login"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>




            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightsolmon_gray"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_weight="0.4"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_password1" />


                    <EditText
                        android:layout_weight="0.1"
                        android:id="@+id/login_edittext_password"

                        android:layout_width="match_parent"

                        android:layout_height="match_parent"

                        android:layout_marginLeft="9dp"

                        android:background="@android:color/transparent"

                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <ImageView
                        android:id="@+id/login_icon_hide_show_password"
                        android:layout_weight="0.4"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_visible" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <RelativeLayout

                android:id="@+id/login_click_login"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/button_drawable_solmon_background">

                <TextView


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/log_in"

                    android:textAlignment="center"
                    android:textColor="@color/white_white"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/login_text_click_forgetpassword"
                android:textStyle="bold"
                android:textColor="@color/solmon"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/forgot_password"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.3"
                    android:background="@color/gray_white" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/or"


                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.3"
                    android:background="@color/gray_white" />
            </LinearLayout>

            <LinearLayout


                android:id="@+id/login_click_login_google"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/button_drawable_google"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/g" />

                <TextView


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"

                    android:layout_marginBottom="15dp"
                    android:text="@string/log_in_google"
                    android:textAlignment="center"
                    android:textColor="@color/black_white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout


                android:id="@+id/login_click_login_facebook"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/button_drawable_facebook"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/f" />

                <TextView


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"

                    android:layout_marginBottom="15dp"
                    android:text="@string/log_in_facebook"
                    android:textAlignment="center"
                    android:textColor="@color/white_white"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account" />

                <TextView
                    android:id="@+id/login_text_click_signup"
                    android:textColor="@color/solmon"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up" />





            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>